--- a/static/desktop.css
+++ b/static/desktop.css
@@ -10,7 +10,7 @@ body{
     display:grid;
     grid-template-columns: 1fr 5fr 1fr;
     grid-auto-rows: minmax(77px, auto);
-    grid-template-rows: 120px 1fr 600px 1fr;
+    grid-template-rows: 120px 100px 600px 1fr;
     
 }
 #page-mask {
@@ -21,9 +21,10 @@ body{
     bottom: 0;
     left: 0;
     cursor: pointer;
+    z-index:99;
   }
 .content > div:nth-child(3){
-    background-color: rgb(255, 248, 239);
+    background-color: rgb(0, 0, 0);
 }
 .content{
     grid-row:3;
@@ -51,7 +52,7 @@ body{
 }
 .footer-spacer{
     grid-column: 2/6;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     display: grid;
 }
 #footer > h3{
