--- a/static/desktop.css
+++ b/static/desktop.css
@@ -10,7 +10,7 @@ body{
     display:grid;
     grid-template-columns: 1fr 5fr 1fr;
     grid-auto-rows: minmax(77px, auto);
-    grid-template-rows: 120px 100px 600px 1fr;
+    grid-template-rows: 120px 100px 2500px 1fr;
     
 }
 #page-mask {
@@ -29,6 +29,7 @@ body{
 .content{
     grid-row:3;
     grid-column: 1/4;
+    grid-template-rows: 2fr 3fr 2fr 3fr;
     grid-template-columns: 2fr 2fr;
     display: grid;
     font-family: "Ubuntu", sans-serif;
@@ -91,10 +92,36 @@ body{
 .navbar {
     grid-column: 1/4;
     grid-row: 1;
+    position: sticky;
 }
 .welcome{
     grid-row: 2;
     grid-column: 2;
+    grid-template-columns: 2fr 1fr 2fr;
+    display: grid;
+}
+#textlogo{
+    grid-column: 2;
+    font-family: "Geo", monospace;
+    font-size: 30px;
+    z-index: 1;
+    height:200px;
+    width:350px;
+    background-color: rgb(0, 0, 0);
+    border: 10px solid rgb(29, 29, 29);
+    border-radius: 60px 0 60px 0;
+    color: white;
+    text-shadow: 3px 1px 3px #ff00d4a6, -3px -1px 3px #ff00d4a6;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    animation: dropdown 1s;
+    position: relative;
+    transition: 0.6s;
+}
+@keyframes dropdown{
+    0% {top:-100px; display: hidden;}
+    20% {top:-100px; display: hidden;}
+    100% {top:0px; display: grid;}
+    }
 }
 #login-modal{
     grid-row: 3;   
