--- a/static/desktop.css
+++ b/static/desktop.css
@@ -113,14 +113,14 @@ body{
     color: white;
     text-shadow: 3px 1px 3px #ff00d4a6, -3px -1px 3px #ff00d4a6;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-    animation: dropdown 1s;
+    animation: dropdown 1.1s;
     position: relative;
     transition: 0.6s;
 }
 @keyframes dropdown{
-    0% {top:-100px; display: hidden;}
-    20% {top:-100px; display: hidden;}
-    100% {top:0px; display: grid;}
+    0% {top:-100px; opacity: 0;}
+    20% {top:-100px; opacity: 0;}
+    100% {top:0px; opacity: 1;}
 }
 #login-modal{
     grid-row: 3;   
