--- a/static/desktop.css
+++ b/static/desktop.css
@@ -107,7 +107,7 @@ body{
     z-index: 1;
     height:200px;
     width:350px;
-    background-color: rgb(0, 0, 0);
+    background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(41, 28, 39), rgb(49, 32, 47));
     border: 10px solid rgb(29, 29, 29);
     border-radius: 60px 0 60px 0;
     color: white;
