--- a/static/desktop.css
+++ b/static/desktop.css
@@ -111,7 +111,7 @@ body{
     border: 10px solid rgb(29, 29, 29);
     border-radius: 60px 0 60px 0;
     color: white;
-    text-shadow: 3px 1px 3px #ff00d4a6, -3px -1px 3px #ff00d4a6;
+    /* text-shadow: 3px 1px 3px #ff00d4a6, -3px -1px 3px #ff00d4a6; */
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
     animation: dropdown 1.1s;
     position: relative;
