--- a/static/desktop.css
+++ b/static/desktop.css
@@ -2,6 +2,7 @@ body{
     font-family: 'Ubuntu', sans-serif;
     text-align: center;
     width:auto;
+    margin: 0 auto;
 }
 .hide{
     display:none !important;
@@ -38,10 +39,10 @@ body{
     position: relative;
     /* animation: movement 4s infinite; */
 }
-#floating {
+/* #floating {
     position: relative;
     animation: movement 3s infinite;
-}
+} */
 @keyframes movement{
     0% {top:0px;right:0px;}
     50% {top:10px;right:10px;}
@@ -102,20 +103,25 @@ body{
 }
 #textlogo{
     grid-column: 2;
-    font-family: "Geo", monospace;
+    font-family: "Ubuntu", monospace;
     font-size: 30px;
     z-index: 1;
-    height:200px;
+    height:180px;
     width:330px;
-    background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(26, 17, 24), rgb(39, 26, 37));
+    /* background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(26, 17, 24), rgb(39, 26, 37)); */
+    background: rgb(0,0,0);
     border: 10px solid rgb(29, 29, 29);
-    border-radius: 60px 0 60px 0;
+    /* border-radius: 60px 0 60px 0; */
     color: white;
     /* text-shadow: 3px 1px 3px #ff00d4a6, -3px -1px 3px #ff00d4a6; */
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
     animation: dropdown 1.1s;
     position: relative;
     transition: 0.6s;
+    transform:skew(-5deg);
+}
+#textlogoname{
+    margin:20px;
 }
 @keyframes dropdown{
     0% {top:-100px; opacity: 0;}
