--- a/static/desktop.css
+++ b/static/desktop.css
@@ -109,7 +109,7 @@ body{
     height:180px;
     width:330px;
     /* background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(26, 17, 24), rgb(39, 26, 37)); */
-    background: rgb(0,0,0);
+    background: rgb(35, 39, 42);
     border: 10px solid rgb(29, 29, 29);
     /* border-radius: 60px 0 60px 0; */
     color: white;
