--- a/static/desktop.css
+++ b/static/desktop.css
@@ -1,39 +1,39 @@
 body{
     font-family: 'Ubuntu', sans-serif;
+    margin: 0 auto;
     text-align: center;
     width:auto;
-    margin: 0 auto;
 }
 .hide{
     display:none !important;
 }
 .wrapper{
     display:grid;
-    grid-template-columns: 1fr 5fr 1fr;
     grid-auto-rows: minmax(77px, auto);
+    grid-template-columns: 1fr 5fr 1fr;
     grid-template-rows: 120px 100px 2500px 1fr;
     
 }
 #page-mask {
     background: rgba(0, 0, 0, 0.5);
-    position: fixed;
-    top: 0;
-    right: 0;
     bottom: 0;
-    left: 0;
     cursor: pointer;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
     z-index:99;
   }
 .content > div:nth-child(3){
     background-color: rgb(0, 0, 0);
 }
 .content{
-    grid-row:3;
-    grid-column: 1/4;
-    grid-template-rows: 2fr 3fr 2fr 3fr;
-    grid-template-columns: 2fr 2fr;
     display: grid;
     font-family: "Ubuntu", sans-serif;
+    grid-column: 1/4;
+    grid-row:3;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: 2fr 3fr 2fr 3fr;
 }
 #competitive{
     position: relative;
@@ -44,51 +44,51 @@ body{
     animation: movement 3s infinite;
 } */
 @keyframes movement{
-    0% {top:0px;right:0px;}
-    50% {top:10px;right:10px;}
-    100% {top:0px;right:0px;}
+    0% {right:0px;top:0px;}
+    50% {right:10px;top:10px;}
+    100% {right:0px;top:0px;}
 }
 .foot{
     grid-column: 1/4;
     grid-row: 4;
 }
 .footer{
-    grid-row:4;
-    grid-column: 1/4;
-    width: 100%;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    background-color: rgba(250, 250, 250, 0.685);
     display: grid;
+    grid-column: 1/4;
     grid-column-gap: 15px;
+    grid-row:4;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     margin: 0 auto;
     margin-top: 20px;
-    padding-top: 30px;
     padding-bottom: 10px;
-    background-color: rgba(250, 250, 250, 0.685);
+    padding-top: 30px;
+    width: 100%;
 }
 .footer-spacer{
+    display: grid;
     grid-column: 2/6;
     grid-template-columns: 1fr 1fr 1fr;
-    display: grid;
 }
 #footer > h3{
     font-size: 16px;
 }
 #footer{
     font-size: 14px;
-    width: 300px;
     margin: 0 auto;
+    width: 300px;
 }
 .header{
-    grid-row: 1;
-    grid-column: 1/4;
     background-color: rgba(221, 221, 221, 0.1);
-    text-align: center;
-    margin:0 auto;  
+    grid-column: 1/4;
+    grid-row: 1;
+    margin:0 auto;
+    text-align: center;  
     width:100%;
 }
 #background, #firebaseui-auth-container{
-    grid-row: 3;
     grid-column: 2;
+    grid-row: 3;
 }
 .navbar {
     grid-column: 1/4;
@@ -96,55 +96,55 @@ body{
     position: sticky;
 }
 .welcome{
-    grid-row: 2;
-    grid-column: 2;
-    grid-template-columns: 2fr 1fr 2fr;
     display: grid;
+    grid-column: 2;
+    grid-row: 2;
+    grid-template-columns: 2fr 1fr 2fr;
 }
 #textlogo{
-    grid-column: 2;
-    font-family: "Ubuntu", monospace;
-    font-size: 30px;
-    z-index: 1;
-    height:180px;
-    width:330px;
+    animation: dropdown 1.1s;
     /* background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(26, 17, 24), rgb(39, 26, 37)); */
     background: rgb(35, 39, 42);
     border: 10px solid rgb(29, 29, 29);
-    /* border-radius: 60px 0 60px 0; */
-    color: white;
     /* text-shadow: 3px 1px 3px #ff00d4a6, -3px -1px 3px #ff00d4a6; */
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-    animation: dropdown 1.1s;
+    /* border-radius: 60px 0 60px 0; */
+    color: white;
+    font-family: "Ubuntu", monospace;
+    font-size: 30px;
+    grid-column: 2;
+    height:180px;
     position: relative;
-    transition: 0.6s;
     transform:skew(-5deg);
+    transition: 0.6s;
+    width:330px;
+    z-index: 1;
 }
 #textlogoname{
     margin:20px;
 }
 @keyframes dropdown{
-    0% {top:-100px; opacity: 0;}
-    20% {top:-100px; opacity: 0;}
-    100% {top:0px; opacity: 1;}
+    0% { opacity: 0;top:-100px;}
+    20% { opacity: 0;top:-100px;}
+    100% { opacity: 1;top:0px;}
 }
-#login-modal{
-    grid-row: 3;   
+#login-modal{   
     grid-column: 2;
+    grid-row: 3;
     height:300px;
-    width:100%;
-    position: absolute;
     left:0;
+    position: absolute;
     right:0;
     top:350px;
+    width:100%;
     z-index: 100;
 }
 input{
     border:none;
     border-bottom: 2px solid rgba(98, 166, 255, 0.801);
-    width: 80%;
-    height: 40px;
     font-size: 20px;
+    height: 40px;
+    width: 80%;
 }
 input:focus{
     border-bottom: 4px solid rgba(98, 166, 255, 0.801);
@@ -157,13 +157,13 @@ input::placeholder{
     font-size: 15px;
 }
 input:focus::placeholder{
-    font-size: 20px;
     color:rgb(82, 157, 255);
+    font-size: 20px;
     transition: all 0.45s ease 0s;
 }
 #input {
-    grid-row: 2;
     grid-column: 1;
+    grid-row: 2;
 }
 #input2{
     grid-row:3;
@@ -172,13 +172,13 @@ input:focus::placeholder{
     grid-row: 4;
 }
 button{
-    height:auto;
-    width:auto;
-    padding: 9px 16px;
     background-color: rgb(221, 221, 221);
     border: none;
-    display: inline-block;
     cursor: pointer;
+    display: inline-block;
+    height:auto;
+    padding: 9px 16px;
+    width:auto;
 }
 button:hover{
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.24), 0 4px 4px 0 rgba(0,0,0,0.19);
