--- a/static/nav.css
+++ b/static/nav.css
@@ -31,8 +31,8 @@ li#home a {
   background-color:rgb(35, 39, 42);
 	color: rgb(163, 163, 163);
   color:rgb(255, 255, 255);
-	display: block;
-  font-family: 'Ubuntu', sans-serif;
+	/* display: block; */
+  font-family: sans-serif;
   font-size: 30px;
   font-weight: bold;
 	padding: 2px 10px;
