--- a/static/nav.css
+++ b/static/nav.css
@@ -32,7 +32,7 @@ li#home a {
 	color: rgb(163, 163, 163);
   color:rgb(255, 255, 255);
 	/* display: block; */
-  font-family: sans-serif;
+  font-family: "Ubuntu",sans-serif;
   font-size: 30px;
   font-weight: bold;
 	padding: 2px 10px;
@@ -72,4 +72,14 @@ a{
 }
 .minimize{
   display:none;
+}
+@font-face {
+  font-family: 'zektonbo';
+  font-display: swap;
+  src: url('../static/fonts/zektonbo.ttf');
+}
+@font-face {
+  font-family: 'Ubuntu';
+  font-display: swap;
+  src: url('../static/fonts/Ubuntu-Regular.ttf');
 }
