--- a/static/nav.css
+++ b/static/nav.css
@@ -3,27 +3,30 @@ ul.nav {
 	list-style-type: none;
   margin: 0 auto;
 	overflow: hidden;
-	padding: 1vh;
+  padding: 1vh;
+  display: grid;
+  grid-template-columns: 6vh 33vh 3fr;
 }
 li#home{
   float:left;
   list-style-type: none;
   margin: 0 auto;
+  padding:0;
 }
 li#mobile {
-  float:left;
+  float: left;
   list-style-type: none;
   margin: 0 auto;
 }
-li#mobile a {
+#mobile a {
   background-color:rgb(35, 39, 42);
 	color: rgb(163, 163, 163);
   color:rgb(255, 255, 255);
 	display: block;
   font-family: 'Ubuntu', sans-serif;
   font-size: 1.8vh;
-  margin-top: 9px;
-	padding: 1.4vh 2vh;
+  margin: 0 auto;
+  padding: 1.4vh 2vh;
   text-align: center;
   text-decoration: none !important;
 }
@@ -31,19 +34,19 @@ li#home a {
   background-color:rgb(35, 39, 42);
 	color: rgb(163, 163, 163);
   color:rgb(255, 255, 255);
-	/* display: block; */
+	display: block;
   font-family: "Ubuntu",sans-serif;
   font-size: 3vh;
   font-weight: bold;
-	padding: 2px 10px;
-  padding-top: 10px;
+	/* padding: 2px 10px;
+  padding-top: 10px; */
   text-align: center;
   text-decoration: none !important;
 }
 li#home a:hover {
   cursor:pointer;
 }
-li#mobile a:hover {
+#mobile a:hover {
   background-color: rgba(138, 138, 138, 0.548);
 }
 li a:active {
@@ -66,6 +69,8 @@ div#mobile{
 #right{
   float:right;
   grid-column: 3;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 10px;
 }
 a{
   text-decoration: none;
