--- a/static/desktop.css
+++ b/static/desktop.css
@@ -135,7 +135,7 @@ body{
 #footer{
     font-size: 14px;
     margin: 0 auto;
-    width: 300px;
+    /* width: 300px; */
 }
 .header{
     background-color: rgba(221, 221, 221, 0.1);
