--- a/static/desktop.css
+++ b/static/desktop.css
@@ -187,7 +187,7 @@ body{
     20% { opacity: 0;top:-100px;}
     100% { opacity: 1;top:0px;}
 }
-#about{
+#rgb{
     animation: rgb 20s;
     animation-iteration-count: infinite;
 }
@@ -203,6 +203,19 @@ body{
     80% {background-color: rgba(202, 255, 133, 0.2);}
     90% {background-color: rgba(147, 255, 133, 0.2);}
     100% {background-color: rgba(133, 255, 245, 0.2)}
+}
+.container {
+    max-width: 100%;
+    max-height: 250px;
+    margin: 0 auto;
+    padding: 0;
+    background-color: #fff;
+    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
+    overflow: hidden;
+}
+.particle{
+    height:auto !important;
+    z-index:-1;
 }
 input{
     border:none;
