--- a/static/portable.css
+++ b/static/portable.css
@@ -205,10 +205,17 @@ body{
     100% {background-color: rgba(133, 255, 245, 0.2)}
 }
 .container {
-    display: none;
+    max-width: 100%;
+    max-height: 250px;
+    margin: 0 auto;
+    padding: 0;
+    background-color: #fff;
+    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
+    overflow: hidden;
 }
 .particle{
-    display: none;
+    height: 0 !important;
+    width: 0 !important;
 }
 input{
     border:none;
