--- a/static/desktop.css
+++ b/static/desktop.css
@@ -8,48 +8,44 @@ body{
     display:none !important;
 }
 #mask{
-    z-index: 1;
-    position: absolute;
     background: rgb(255, 255, 255);
-    top:0;
-    right:0;
-    left:0;
     bottom:0;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    display: grid;
+    left:0;
+    position: absolute;
+    right:0;
+    top:0;
+    z-index: 1;
 }
 #preload {
-    position: relative;
+    -webkit-animation: flash 1.5s linear infinite;
+    animation: flash 1.5s linear infinite;
     background-image: url("../static/images/logo.svg");
+    background-position: center;
     background-repeat: no-repeat;
     background-size: 20%;
-    background-position: center;
-    /* left: 50%;
-    top: 50%; */
-    z-index: 2;
-    /* margin: -75px 0 0 -75px; */
-    /* border: 20px solid #f3f3f3;
-    border-top: 16px solid #069cff; */
-    /* width: 25%;
-    height: 25%; */
-    -webkit-animation: spin 1.5s linear infinite;
-    animation: spin 1.5s linear infinite;
-    grid-row: 2/3;
     grid-column: 2/3;
+    grid-row: 2/3;
+    position: relative;
+    z-index: 2;
 }
 .displayup{
-    -webkit-animation-name: animatehide;
     -webkit-animation-duration: 1s;
-    animation-name: animatehide;
-    animation-duration: 1s
+    animation-duration: 1s;
+    -webkit-animation-name: animatehide;
+    animation-name: animatehide
 }
-@-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
+@-webkit-keyframes flash {
+    0% { opacity: 1; }
+    25% { opacity: 0;}
+    50% { opacity: 1;}
+    75% { opacity: 0;}
+    100% { opacity: 1;}
 }
   
-@keyframes spin {
+@keyframes flash {
     0% { opacity: 1; }
     25% { opacity: 0;}
     50% { opacity: 1;}
@@ -65,13 +61,11 @@ body{
     from{ opacity:1 } 
     to{ opacity:0 }
 }
-
 .wrapper{
     display:grid;
     grid-auto-rows: minmax(77px, auto);
     grid-template-columns: 1fr 5fr 1fr;
     grid-template-rows: 120px 100px 2500px 1fr;
-    
 }
 #page-mask {
     background: rgba(0, 0, 0, 0.5);
@@ -83,6 +77,19 @@ body{
     top: 0;
     z-index:99;
   }
+.header {
+    background-color: rgba(221, 221, 221, 0.1);
+    grid-column: 1/4;
+    grid-row: 1;
+    margin:0 auto;
+    text-align: center;  
+    width:100%;
+}
+.navbar {
+    grid-column: 1/4;
+    grid-row: 1;
+    position: sticky;
+}
 .content > div:nth-child(3){
     background-color: rgb(0, 0, 0);
 }
@@ -93,14 +100,6 @@ body{
     grid-row:3;
     grid-template-columns: 2fr 2fr;
     grid-template-rows: 2fr 3fr 2fr 3fr;
-}
-#competitive{
-    position: relative;
-    /* animation: movement 4s infinite; */
-}
-#valuesH1{
-    border-bottom: 4px solid rgb(15, 136, 240);
-    display: inline;
 }
 @keyframes movement{
     0% {right:0px;top:0px;}
@@ -135,30 +134,72 @@ body{
 #footer{
     font-size: 14px;
     margin: 0 auto;
-    /* width: 300px; */
 }
-.header{
-    background-color: rgba(221, 221, 221, 0.1);
-    grid-column: 1/4;
-    grid-row: 1;
-    margin:0 auto;
-    text-align: center;  
-    width:100%;
-}
-#background, #firebaseui-auth-container{
-    grid-column: 2;
-    grid-row: 3;
-}
-.navbar {
-    grid-column: 1/4;
-    grid-row: 1;
-    position: sticky;
-}
+
+
+
+
+/* HOME */
 .welcome{
     display: grid;
     grid-column: 2;
     grid-row: 2;
     grid-template-columns: 2fr 1fr 2fr;
+}
+#backgroundpic{
+    grid-column: 1/3; 
+    grid-row: 1; 
+    z-index: 0; 
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 2fr; 
+    background-image: url('../static/images/field.PNG'); 
+    background-repeat: no-repeat; 
+    background-position: center center; 
+    background-attachment: fixed; 
+    background-size: cover;
+}
+#competitive{
+    position: relative;
+}
+#competitive > h2{
+    padding-left: 10%;
+    padding-top: 130px; 
+    font-size: 45px; 
+    text-shadow: 5px 5px 2px#3f3f3fa6; 
+    text-align: left;
+}
+#awards{
+    grid-column: 2; 
+    grid-row: 1;
+    background-color: rgba(85, 85, 85, 0.322);
+}
+#awards > h2{
+    padding-right: 10%; 
+    padding-top: 130px; 
+    font-size: 37px; 
+    text-shadow: 5px 5px 2px#3f3f3fa6; 
+    text-align: right; 
+    color:white;
+}
+#hR1{
+    grid-column: 1/3; 
+    grid-row: 2; 
+    grid-template-columns: 1fr 1fr; 
+    display: grid;
+}
+#hR2{
+    grid-column: 1/3; 
+    grid-row: 3;
+    background-attachment: fixed; 
+    background-image: url('../static/images/arena3.png'); 
+    background-repeat: no-repeat; 
+    background-position: center center; 
+    background-size: cover;
+}
+#hR3{
+    grid-column: 1/3; 
+    grid-row: 4;
 }
 #textlogo{
     animation: dropdown 1.1s;
@@ -170,13 +211,13 @@ body{
     /* border-radius: 60px 0 60px 0; */
     color: white;
     font-family: sans-serif, monospace;
-    font-size: 3.1vh;
+    font-size: 3.1vmin;
     grid-column: 2;
-    height:18vh;
+    height:18vmin;
     position: relative;
     transform:skew(-5deg);
     transition: 0.6s;
-    width:35vh;
+    width:35vmin;
     z-index: 1;
 }
 #textlogoname{
@@ -204,19 +245,175 @@ body{
     90% {background-color: rgba(147, 255, 133, 0.2);}
     100% {background-color: rgba(133, 255, 245, 0.2)}
 }
+
+
+/* ABOUT */
 .container {
-    max-width: 100%;
-    max-height: 250px;
-    margin: 0 auto;
-    padding: 0;
     background-color: #fff;
     box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
+    margin: 0 auto;
+    max-height: 250px;
+    max-width: 100%;
     overflow: hidden;
+    padding: 0;
+    grid-row: 1/3; 
+    grid-column: 1/4;
 }
-.particle{
+.particle {
     height:auto !important;
     z-index:-1;
 }
+#about {
+    display: inline; 
+    text-align: center; 
+    font-size: 5vmin; 
+    margin: 0 auto;
+}
+#backgroundpic2 {
+    grid-column: 1/3; 
+    grid-row: 1; 
+    z-index: 0; 
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 2fr; 
+    background-image: url('../static/images/with 221w.jpg'); 
+    background-repeat: no-repeat; 
+    background-position: top center; 
+    background-attachment: scroll; 
+    background-size: cover; 
+    border-top: 2px solid rgb(35, 39, 42); 
+    border-bottom: 2px solid rgb(35, 39, 42);
+}
+#team2405 {
+    position: relative;
+}
+#team2405 > h2{
+    padding-left: 25%; 
+    padding-top: 450px; 
+    font-size: 2vmin; 
+    text-shadow: 5px 5px 2px#3f3f3fa6; 
+    text-align: left;
+}
+#team221 {
+    position: relative;
+    grid-column: 2; 
+    grid-row: 1;
+    background-color: rgba(85, 85, 85, 0.322);
+}
+#team221 > h2 {
+    padding-right: 25%; 
+    padding-top: 450px; 
+    font-size: 2vmin; 
+    text-shadow: 5px 5px 2px#3f3f3fa6; 
+    text-align: right; 
+    color:white;
+}
+#aR1 {
+    grid-column: 1/3; 
+    grid-row: 2; 
+    grid-template-columns: 1fr 3fr 1fr; 
+    display: grid; 
+    grid-template-rows: 1fr 1fr;
+}
+#aR1C1 {
+    grid-column: 2/3; 
+    grid-row: 1/3; 
+    display: grid; 
+    grid-template-columns: 3fr 1fr 2fr;
+}
+#aR1C1 > p {
+    grid-column:1; 
+    padding-top: 8vh; 
+    text-align: left; 
+    color: rgb(35, 39, 42); 
+    font-size: 2.46vh; 
+    text-indent: 2em;
+}
+#aR2 {
+    color: white; 
+    grid-column: 1/3; 
+    background-attachment: fixed; 
+    background-image: url('../static/images/Scouting.jpg'); 
+    background-repeat: no-repeat; 
+    background-position: center center; 
+    background-size: cover;  
+    grid-template-columns: 1fr 2fr 2fr 2fr 1fr; 
+    display: grid; 
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+#aR2C1 {
+    padding-left: 1.5vw; 
+    grid-column: 2/4; 
+    grid-row: 2; 
+    border-radius: 3.8vmin; 
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
+    margin-bottom: 1vmin;
+}
+#aR2C2 {
+    padding-left: 5vw; 
+    grid-column: 3/5; 
+    grid-row: 3/5; 
+    border-radius: 3.8vmin;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
+    margin-top: 4vmin; 
+    margin-bottom: 9vmin;
+}
+#aR3 {
+    grid-column: 1/3; 
+    grid-row: 4; 
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
+    grid-template-rows: 150px 100px 3fr 100px;  
+    color:rgb(35, 39, 42); 
+    font-size: 1.7vmin;
+}
+#aR3C1{
+    grid-column: 2/5; grid-row: 3; 
+    display:grid; 
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr; 
+    grid-template-columns: 2fr 1fr 2fr;
+}
+#valuesH1{
+    border-bottom: 4px solid rgb(15, 136, 240);
+    display: inline;
+}
+
+
+
+
+/* CONTACT */
+#backgroundpic3 {
+    grid-column: 1/3; 
+    grid-row: 1; 
+    z-index: 0; 
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 2fr; 
+    background-image: url('../static/images/arm gear.png'); 
+    background-repeat: no-repeat; 
+    background-position: center center; 
+    background-attachment: fixed; 
+    background-size: cover;
+}
+#contact > h1{
+    padding-left: 10%; 
+    padding-top: 140px; 
+    font-size: 10vmin; 
+    text-shadow: 3px 3px 2px#3f3f3fa6; 
+    text-align: left;
+}
+#cR1{
+    grid-column: 1/3; 
+    grid-row: 2; 
+    grid-template-columns: 1fr 2fr 1fr; 
+    display: grid;
+}
+
+
+
+
+
+/* OTHER */
 input{
     border:none;
     border-bottom: 2px solid rgba(98, 166, 255, 0.801);
