--- a/static/desktop.css
+++ b/static/desktop.css
@@ -248,6 +248,12 @@ body{
 
 
 /* ABOUT */
+.wrapper_mobile {
+    grid-template-rows: 120px 100px auto auto !important
+}
+.content_mobile {
+    grid-template-rows: 1fr 1.5fr 1fr 3fr !important;
+}
 .container {
     background-color: #fff;
     box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
@@ -286,6 +292,10 @@ body{
 }
 #team2405 {
     position: relative;
+    grid-column: 1; 
+    grid-row: 1; 
+    color:white; 
+    background-color: rgba(85, 85, 85, 0.322);
 }
 #team2405 > h2{
     padding-left: 25%; 
@@ -329,6 +339,9 @@ body{
     font-size: 2.46vh; 
     text-indent: 2em;
 }
+#pic3388 {
+    grid-column:3;
+}
 #aR2 {
     color: white; 
     grid-column: 1/3; 
@@ -349,6 +362,17 @@ body{
     background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
     margin-bottom: 1vmin;
 }
+#aR2C1 > h3 {
+    text-align: left; 
+    font-size: 4vmin; 
+    margin: 0 auto; 
+    padding-top: 2.5vmin;
+}
+#aR2C1 > p {
+    text-align: left; 
+    font-size: 2vmin; 
+    margin:0 auto;
+}
 #aR2C2 {
     padding-left: 5vw; 
     grid-column: 3/5; 
@@ -357,6 +381,17 @@ body{
     background: linear-gradient(to left, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0)); 
     margin-top: 4vmin; 
     margin-bottom: 9vmin;
+}
+#aR2C2 > h3 {
+    text-align: left; 
+    font-size: 4vmin; 
+    margin: 0 auto; 
+    padding-top: 2vmin;
+}
+#aR2C2 > p {
+    text-align: left; 
+    font-size: 2vmin;
+    margin:0 auto;
 }
 #aR3 {
     grid-column: 1/3; 
