--- a/static/nav-mobile.css
+++ b/static/nav-mobile.css
@@ -39,6 +39,7 @@ li#home a {
 	display: block;
   font-family: 'Ubuntu', sans-serif;
   font-size: 25px;
+  font-weight: bold;
 	padding: 2px 10px;
   padding-top: 10px;
   text-align: center;
