--- a/static/portable.css
+++ b/static/portable.css
@@ -65,7 +65,7 @@ body{
     display:grid;
     grid-auto-rows: minmax(77px, auto);
     grid-template-columns: 1fr 5fr 1fr;
-    grid-template-rows: 120px 100px 2500px 1fr;
+    grid-template-rows: 120px 50px 2500px 1fr;
 }
 #page-mask {
     background: rgba(0, 0, 0, 0.5);
@@ -99,7 +99,7 @@ body{
     grid-column: 1/4;
     grid-row:3;
     grid-template-columns: 2fr 2fr;
-    grid-template-rows: 2fr 3fr 2fr 3fr;
+    grid-template-rows: 70vmin 3fr 2fr 3fr;
 }
 @keyframes movement{
     0% {right:0px;top:0px;}
@@ -129,10 +129,10 @@ body{
     grid-template-columns: 1fr 1fr 1fr;
 }
 #footer > h3{
-    font-size: 19px;
+    font-size: 2.5vmin;
 }
 #footer{
-    font-size: 14px;
+    font-size: 1.6vmin;
     margin: 0 auto;
 }
 
@@ -165,7 +165,7 @@ body{
 #competitive > h2{
     padding-left: 10%;
     padding-top: 130px; 
-    font-size: 45px; 
+    font-size: 4.5vmin; 
     text-shadow: 5px 5px 2px#3f3f3fa6; 
     text-align: left;
 }
@@ -177,7 +177,7 @@ body{
 #awards > h2{
     padding-right: 10%; 
     padding-top: 130px; 
-    font-size: 37px; 
+    font-size: 3.7vmin; 
     text-shadow: 5px 5px 2px#3f3f3fa6; 
     text-align: right; 
     color:white;
@@ -221,7 +221,7 @@ body{
     z-index: 1;
 }
 #textlogoname{
-    margin:2vh;
+    margin:2vmin;
 }
 @keyframes dropdown{
     0% { opacity: 0;top:-100px;}
