--- a/static/portable.css
+++ b/static/portable.css
@@ -25,7 +25,7 @@ body{
     background-image: url("../static/images/logo.svg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 20%;
+    background-size: 50%;
     grid-column: 2/3;
     grid-row: 2/3;
     position: relative;
@@ -116,7 +116,7 @@ body{
     grid-column: 1/4;
     grid-column-gap: 15px;
     grid-row:4;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: .5fr 1fr 1fr 1fr 1fr .5fr;
     margin: 0 auto;
     margin-top: 20px;
     padding-bottom: 10px;
@@ -129,10 +129,10 @@ body{
     grid-template-columns: 1fr 1fr 1fr;
 }
 #footer > h3{
-    font-size: 2.5vmin;
+    font-size: 2.8vmin;
 }
 #footer{
-    font-size: 1.6vmin;
+    font-size: 1.9vmin;
     margin: 0 auto;
 }
 
