--- a/static/portable.css
+++ b/static/portable.css
@@ -186,7 +186,37 @@ body{
     grid-column: 1/3; 
     grid-row: 2; 
     grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 1fr 1fr;
     display: grid;
+}
+#hR1C1{
+    grid-column: 1/3; 
+    grid-row: 1;
+    display: grid; 
+    grid-template-columns: 1fr 5fr 1fr; 
+    grid-template-rows: 1fr 1fr; 
+}
+#hR1C1 > h3{
+    font-size: 6vmin;
+}
+#hR1C1 > form{
+    margin-top: 19vmin !important;
+}
+#hR1C1 > form > button{
+    height: 19vmin !important; 
+    width: 40vmin !important;
+    font-size: 3.5vmin !important;
+}
+#hR1C2{
+    grid-column: 1/3;
+    grid-row: 2;
+    padding-top: 10vmin;
+}
+#hR1C2 > h3{
+    font-size: 6vmin;
+}
+#hR1C2 > iframe{
+    height: 26vh !important;
 }
 #hR2{
     grid-column: 1/3; 
@@ -433,9 +463,24 @@ body{
     background-attachment: fixed; 
     background-size: cover;
 }
+.contact_mobile{
+    grid-template-rows: .4fr 1.6fr !important;
+}
+#contact_container{
+    grid-column: 1/3;
+    grid-row: 1;
+    color:white;
+    background-color: rgba(85, 85, 85, 0.322);
+}
+#contact_container2{
+    grid-column: 2;
+    grid-row: 1;
+    color:white;
+    background-color: rgba(85, 85, 85, 0);
+}
 #contact > h1{
     padding-left: 10%; 
-    padding-top: 140px; 
+    margin-top: 90px; 
     font-size: 10vmin; 
     text-shadow: 3px 3px 2px#3f3f3fa6; 
     text-align: left;
@@ -445,6 +490,14 @@ body{
     grid-row: 2; 
     grid-template-columns: 1fr 2fr 1fr; 
     display: grid;
+}
+#cR1 > iframe{
+    padding-top: 9vmin; 
+    grid-column: 1/3; 
+    min-height: 830px; 
+    min-width: 133%; 
+    height: auto; 
+    margin: 0 auto;
 }
 
 
