--- a/static/desktop.css
+++ b/static/desktop.css
@@ -187,6 +187,15 @@ body{
     grid-template-columns: 1fr 1fr; 
     display: grid;
 }
+#hR1C1{
+    grid-column: 1; 
+    display: grid; 
+    grid-template-columns: 1fr 2fr 1fr; 
+    grid-template-rows: 1fr 1fr 1fr; 
+}
+#hR1C2{
+    grid-column: 2;
+}
 #hR2{
     grid-column: 1/3; 
     grid-row: 3;
@@ -429,6 +438,21 @@ body{
     background-attachment: fixed; 
     background-size: cover;
 }
+.contact_mobile{
+    grid-template-rows: 1fr 1.6fr !important;
+}
+#contact_container{
+    grid-column: 1;
+    grid-row: 1;
+    color:white;
+    background-color: rgba(85, 85, 85, 0.322);
+}
+#contact_container2{
+    grid-column: 2;
+    grid-row: 1;
+    color:white;
+    background-color: rgba(85, 85, 85, 0.322);
+}
 #contact > h1{
     padding-left: 10%; 
     padding-top: 140px; 
@@ -442,7 +466,14 @@ body{
     grid-template-columns: 1fr 2fr 1fr; 
     display: grid;
 }
-
+#cR1 > iframe{
+    padding-top: 9vmin; 
+    grid-column: 2; 
+    min-height: 800px; 
+    min-width: 100%; 
+    height: auto; 
+    margin: 0 auto;
+}
 
 
 
