--- a/static/desktop.css
+++ b/static/desktop.css
@@ -22,7 +22,7 @@ body{
 #preload {
     -webkit-animation: flash 1.5s linear infinite;
     animation: flash 1.5s linear infinite;
-    background-image: url("../static/images/logo.svg");
+    background-image: url("../static/images/logo_curve.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 20%;
@@ -199,11 +199,21 @@ body{
 #hR2{
     grid-column: 1/3; 
     grid-row: 3;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
     background-attachment: fixed; 
     background-image: url('../static/images/arena3.png'); 
     background-repeat: no-repeat; 
     background-position: center center; 
     background-size: cover;
+}
+#hR2 > h1{
+    margin: 0 auto;
+    color: rgb(255, 255, 255);
+    font-size: 14vmin;
+    grid-row: 2;
+    letter-spacing: 1.1vmin;
+    text-shadow: -9px 4px 5px#3f3f3fa6; 
 }
 #hR3{
     grid-column: 1/3; 
